[tool.poetry]
name = "osmosiswriter"
version = "0.1.0"
description = "A versatile novel writing software"
authors = ["Jennifer Black"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
kink = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
